app/ehrbase/src/system_log/snapshots/ehrbase__system_log__message__tests__authentication_login.snap
---
source: app/ehrbase/src/system_log/message.rs
assertion_line: 515
expression: xml
---
<AuditMessage>
  <EventIdentification EventActionCode="E" EventDateTime="[REDACTED]" EventOutcomeIndicator="0">
    <EventID csd-code="110114" codeSystemName="DCM" originalText="User Authentication"/>
    <EventTypeCode csd-code="110122" codeSystemName="DCM" originalText="Login"/>
    <EventOutcomeDescription>Operation performed successfully</EventOutcomeDescription>
  </EventIdentification>
  <ActiveParticipant UserID="john doe" UserIsRequestor="true" NetworkAccessPointID="10.216.24.150" NetworkAccessPointTypeCode="2">
    <RoleIDCode csd-code="110153" codeSystemName="DCM" originalText="Source Role ID"/>
  </ActiveParticipant>
  <ActiveParticipant UserID="ehrbase" UserIsRequestor="false" NetworkAccessPointID="10.42.23.77" NetworkAccessPointTypeCode="2">
    <RoleIDCode csd-code="110152" codeSystemName="DCM" originalText="Destination Role ID"/>
  </ActiveParticipant>
  <AuditSourceIdentification AuditEnterpriseSiteID="1f332a66-0000-0000-0000-000000000001" AuditSourceID="ehrbase">
    <AuditSourceTypeCode csd-code="4" codeSystemName="DCM" originalText="Application Server Process or Thread"/>
  </AuditSourceIdentification>
</AuditMessage>
