app/ehrbase/src/system_log/snapshots/ehrbase__system_log__message__tests__template_upload_C.snap
---
source: app/ehrbase/src/system_log/message.rs
assertion_line: 411
expression: xml
---
<AuditMessage>
  <EventIdentification EventActionCode="C" EventDateTime="[REDACTED]" EventOutcomeIndicator="0">
    <EventID csd-code="110100" codeSystemName="DCM" originalText="template"/>
    <EventOutcomeDescription>Operation performed successfully</EventOutcomeDescription>
  </EventIdentification>
  <ActiveParticipant UserID="john doe" UserIsRequestor="true" NetworkAccessPointID="10.216.24.150" NetworkAccessPointTypeCode="2">
    <RoleIDCode csd-code="110153" codeSystemName="DCM" originalText="Source Role ID"/>
  </ActiveParticipant>
  <ActiveParticipant UserID="ehrbase" UserIsRequestor="false" NetworkAccessPointID="10.42.23.77" NetworkAccessPointTypeCode="2">
    <RoleIDCode csd-code="110152" codeSystemName="DCM" originalText="Destination Role ID"/>
  </ActiveParticipant>
  <AuditSourceIdentification AuditEnterpriseSiteID="1f332a66-0000-0000-0000-000000000001" AuditSourceID="ehrbase">
    <AuditSourceTypeCode csd-code="4" codeSystemName="DCM" originalText="Application Server Process or Thread"/>
  </AuditSourceIdentification>
  <ParticipantObjectIdentification ParticipantObjectID="vital_signs.v1" ParticipantObjectTypeCode="2" ParticipantObjectDataLifeCycle="1">
    <ParticipantObjectIDTypeCode csd-code="12" codeSystemName="RFC-3881" originalText="URI"/>
  </ParticipantObjectIdentification>
</AuditMessage>
